[gd_scene load_steps=3 format=3 uid="uid://lgpbr0k8c88h"]

[ext_resource type="Texture2D" uid="uid://dflojhmthj1ps" path="res://circback.PNG" id="1_v1it0"]
[ext_resource type="Script" path="res://testing_node.gd" id="2_aurju"]

[node name="testingNode" type="Node2D"]
script = ExtResource("2_aurju")

[node name="backgroundColor" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="Circback" type="Sprite2D" parent="backgroundColor"]
position = Vector2(576, 324)
scale = Vector2(0.622703, 0.715232)
texture = ExtResource("1_v1it0")

[node name="b1" type="Button" parent="."]
offset_left = 105.0
offset_top = 194.0
offset_right = 275.0
offset_bottom = 319.0
text = "Question 1"

[node name="b2" type="Button" parent="."]
offset_left = 356.0
offset_top = 194.0
offset_right = 526.0
offset_bottom = 319.0
text = "Question 2"

[node name="b3" type="Button" parent="."]
offset_left = 604.0
offset_top = 194.0
offset_right = 774.0
offset_bottom = 319.0
text = "Question 3"

[node name="b4" type="Button" parent="."]
offset_left = 881.0
offset_top = 194.0
offset_right = 1051.0
offset_bottom = 319.0
text = "Question 4"

[node name="b5" type="Button" parent="."]
offset_left = 105.0
offset_top = 370.0
offset_right = 275.0
offset_bottom = 495.0
text = "Question 5"

[node name="b6" type="Button" parent="."]
offset_left = 356.0
offset_top = 370.0
offset_right = 526.0
offset_bottom = 495.0
text = "Question 6"

[node name="b7" type="Button" parent="."]
offset_left = 604.0
offset_top = 370.0
offset_right = 774.0
offset_bottom = 495.0
text = "Question 7"

[node name="b8" type="Button" parent="."]
offset_left = 881.0
offset_top = 370.0
offset_right = 1051.0
offset_bottom = 495.0
text = "Exit"

[node name="TextEdit" type="LineEdit" parent="."]
offset_left = 369.0
offset_top = 67.0
offset_right = 787.0
offset_bottom = 146.0
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 41
text = " CIRCUITS POP QUIZ "
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false

[connection signal="pressed" from="b1" to="." method="_on_b_1_pressed"]
[connection signal="pressed" from="b2" to="." method="_on_b_2_pressed"]
[connection signal="pressed" from="b3" to="." method="_on_b_3_pressed"]
[connection signal="pressed" from="b4" to="." method="_on_b_4_pressed"]
[connection signal="pressed" from="b5" to="." method="_on_b_5_pressed"]
[connection signal="pressed" from="b6" to="." method="_on_b_6_pressed"]
[connection signal="pressed" from="b7" to="." method="_on_b_7_pressed"]
[connection signal="pressed" from="b8" to="." method="_on_b_8_pressed"]
