extends Node2D


func _on_b_1_pressed():
	get_tree().change_scene_to_file("res://question1.tscn")


func _on_b_2_pressed():
	get_tree().change_scene_to_file("res://question2.tscn")


func _on_b_3_pressed():
	get_tree().change_scene_to_file("res://question3.tscn")


func _on_b_4_pressed():
	get_tree().change_scene_to_file("res://question4.tscn")


func _on_b_5_pressed():
	get_tree().change_scene_to_file("res://question5.tscn")


func _on_b_6_pressed():
	get_tree().change_scene_to_file("res://question6.tscn")


func _on_b_7_pressed():
	get_tree().change_scene_to_file("res://question7.tscn")


func _on_b_8_pressed():
	get_tree().quit()
